# embedded-drum-kit

./: .gitignore  CMakeLists.txt  Code_DAC.ino  README.md  TaskDistribution.md  drum-kit.c  kick 12 bit  main.cpp
Code_DAC/: Code_DAC.ino
DAC/: DAC.ino  DAC_notes.md
drum-kit/: CMakeLists.txt  CMakePresets.json  drum-kit.c  drum-kit.cpp
scripts/: mp3_to_cpp_array.py
src/: audio.cpp  audio.hpp  bass.hpp  buttons.cpp  closed_hi_hat.hpp  configs.hpp  crash_cymbal.hpp  fx1.hpp  kick.h  kick.hpp  loop.cpp  loop.hpp  main.cpp  open_hi_hat.hpp  pad1.hpp  piezo.cpp  piezo.hpp  ride_cymbal.hpp  snare.hpp  sweep.hpp  synth1.hpp  vocal1.hpp
